--- a/Curso Práctico de HTML y CSS/Google Clone/Index.html
+++ b/Curso Práctico de HTML y CSS/Google Clone/Index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Clone</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="icon" type="image/png" href="./assets/favicon.png" sizes="any">
 </head>
 <body>
     <header>
@@ -46,5 +47,33 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <ul class="footer-left">
+            <li>
+                <a href="#">Sobre Google</a>
+            </li>
+            <li>
+                <a href="#"> Publicidad</a>
+            </li>
+            <li>
+                <a href="#">Negocios</a>
+            </li>
+            <li>
+                <a href="#">Cómo funciona la Búsqueda</a>
+            </li>
+        </ul>
+        <ul class="footer-right">
+            <li>
+                <a href="">Privacidad</a>
+            </li>
+            <li>
+                <a href="">Condiciones</a>
+            </li>
+            <li>
+                <a href="">Preferencias</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
