--- a/Responsive Design_Mobile First/index.html
+++ b/Responsive Design_Mobile First/index.html
@@ -7,13 +7,17 @@
     <title>Batatabit</title>
 </head>
 <body>
+    <!-- Encabezado de la página -->
     <header></header>
+    <!-- Contenido principal -->
     <main>
+        <!-- Secciones del contenido principal -->
         <section></section>
         <section></section>
         <section></section>
         <section></section>
     </main>
+    <!-- Pie de página -->
     <footer></footer>
 </body>
 </html>
