--- a/Responsive Design_Mobile First/index.html
+++ b/Responsive Design_Mobile First/index.html
@@ -8,10 +8,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- Fuentes del proyecto -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Encabezado de la página -->
-    <header></header>
+    <header>
+        <img src="" alt="">
+        <div>
+            <h1>La próxima revolución en el intercambio de monedas.</h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a href="">
+                Conoce nuestros planes <span></span>
+            </a>
+        
+        </div>
+    </header>
     <!-- Contenido principal -->
     <main>
         <!-- Secciones del contenido principal -->
