--- a/Responsive Design_Mobile First/index.html
+++ b/Responsive Design_Mobile First/index.html
@@ -13,14 +13,13 @@
 <body>
     <!-- Encabezado de la página -->
     <header>
-        <img src="" alt="">
-        <div>
+        <img src="assets/img/logo.svg" alt="">
+        <div class="header--title-container">
             <h1>La próxima revolución en el intercambio de monedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="">
-                Conoce nuestros planes <span></span>
+            <a href="" class="header--button">
+                Conoce nuestros planes <span>i</span>
             </a>
-        
         </div>
     </header>
     <!-- Contenido principal -->
