--- a/Responsive Design_Mobile First/index.html
+++ b/Responsive Design_Mobile First/index.html
@@ -85,7 +85,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="currency-table--date">
+                    <div class="commission-table--date">
                         <p> <b>Actualizado:</b> 19 Julio 23:45</p>
                     </div>
                 </div>
