--- a/Responsive Design_Mobile First/index.html
+++ b/Responsive Design_Mobile First/index.html
@@ -92,8 +92,8 @@
             </section>
         </section>
         <section class="main-product-detail">
-            <span></span>
-            <div>
+            <span class="product-detail--batata-logo"></span>
+            <div class="product-detail--title">
                 <h2>Creamos un producto sin compartición.</h2>
                 <p>Confiable y diseñado para su uso diario.</p>
             </div>
@@ -102,7 +102,7 @@
                     <span class="clock"></span>
                     <p class="product--card-title">Tiempo Real</p>
                     <p class="product--card-body">Nuestra API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
-                </article>
+                    </article>
             </section>
             
         </section>
