--- a/Responsive Design_Mobile First/index.html
+++ b/Responsive Design_Mobile First/index.html
@@ -140,7 +140,7 @@
             </div>
             <section class="plans-container--slider">
                 <article class="plans-container--card">
-                    <p class="recomendadio">Recomendado</p>
+                    <p class="recomendado">Recomendado</p>
                     <div class="plan-info-container">
                         <h3 class="plan-card--title">Pago Anual</h3>
                         <p class="plan-card--price"><span>$</span>99</p>
