--- a/Responsive Design_Mobile First/index.html
+++ b/Responsive Design_Mobile First/index.html
@@ -148,6 +148,26 @@
                         <button class="plan-card--ca">Escoger este <span></span></button>
                     </div>
                 </article>
+
+                <article class="plans-container--card">
+                    <p class="recomendado">Básico</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Mensual</h3>
+                        <p class="plan-card--price"><span>$</span>19</p>
+                        <p class="plan-card--saving">* Plan básico aunque con todas ventajas.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+
+                <article class="plans-container--card">
+                    <p class="recomendado">Limitado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">De por vida</h3>
+                        <p class="plan-card--price"><span>$</span>199</p>
+                        <p class="plan-card--saving">* Exclusiva para los primero 100 clientes con un precio especial.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
             </section>
         </section>
     </main>
